Update registration + fixed overflow issue

--- a/register.css
+++ b/register.css
@@ -55,8 +55,8 @@
     margin: 100px auto;
     border-radius: 20px;
     padding: 30px;
-    width: 400px;
-    max-width: 900px;
+    width: 90%;
+    max-width: 500px;
     position: relative;
     z-index: 10;
     border: 2px solid #442925;
